[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Graphics/UI/playerHealthBarProgress.png" type="Texture" id=1]
[ext_resource path="res://UI/HUD.gd" type="Script" id=2]
[ext_resource path="res://Assets/Graphics/UI/playerHealthBarOver.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/UI/bossHealthBarOver.png" type="Texture" id=4]
[ext_resource path="res://Assets/Graphics/UI/bossHealthBarProgress.png" type="Texture" id=5]
[ext_resource path="res://Assets/Font/openSans.tres" type="DynamicFont" id=6]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 50.0
margin_bottom = 50.0
rect_scale = Vector2( 1, 0.75 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 865.0
margin_bottom = 187.0

[node name="HealthBar" type="TextureProgress" parent="MarginContainer/HBoxContainer"]
margin_right = 865.0
margin_bottom = 187.0
value = 100.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 1 )

[node name="BossHealth" type="TextureProgress" parent="."]
visible = false
margin_left = 287.133
margin_top = 1244.12
margin_right = 2287.13
margin_bottom = 1544.12
rect_scale = Vector2( 1, 0.75 )
value = 100.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialPromptArea" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 750.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="TutorialPromptArea"]
margin_right = 2560.0
margin_bottom = 690.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prompt" type="Label" parent="TutorialPromptArea/CenterContainer"]
margin_left = 1280.0
margin_top = 297.0
margin_right = 1280.0
margin_bottom = 393.0
custom_fonts/font = ExtResource( 6 )
align = 1
